--- a/fredswan.html
+++ b/fredswan.html
@@ -3,6 +3,7 @@
   <meta content="text/html; charset=UTF-8" http-equiv="content-type">
   <title>Fred Swan Interview</title>
 	<link rel="stylesheet" href="style.css">
+	<li><a href="index.html">Home</a></li>
 </head>
 
 <body>
