--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 			<h2>Interviews</h2>
 			<UL>
 				<li><a href="fredswan.html">Fred Swan Interview</a></li>
-				<li>Paul Rutz Interview</li>
+				<li><a href="paulrutz.html">Paul Rutz Interview</a></li>
 			</ul>
 		</div>
 	</body>
