--- a/paulrutz.html
+++ b/paulrutz.html
@@ -9,6 +9,15 @@
 <p> Interview Goes here<p/>
 <body>
   <div id="article">
+    <h1>Paul Rutz Interview</h1>
+    <p>Veteran Background</p>
+    <p>Jonas Blanchard</p>
+    <p>Trillium Honors</p>
+    <p>12/15/16</p>
+	  
+  </div>
+	 
+	 
 	 The Person that I interviewed was Paul Rutz, he is a artist and a veteran who works with other veterans to make pieces of art. His art has been showcased in the Oregon Military Museum, and has had multiple gallery shows. He was a Air Transfer Officer as well as a Air Operations Watch Officer in his time in the navy. This picture is of him working with a military major on a art piece. </p>
 
 <p>J: Today is December 11th, the interviewer is Jonas Blanchard and the interviewee is Paul Rutz. The reason that I am interviewing you is because you are a veteran, you were in the navy, right? 
@@ -56,9 +65,5 @@ geographical and socio-economic area, and lots of us have to try hard to imagine
 <p>P: No, but thank you for inviting me to do an interview.</p> 
 
 <p>J: You’re welcome. Bye. </p>
-
-  
-  
-  </div>
   </body>
 </html>
