--- a/fredswan.html
+++ b/fredswan.html
@@ -32,7 +32,7 @@
     <p></p>
     <p>J: It was like that then. Did you notice the changes? When they were happening?</p>
     <p></p>
-    <p><img src="img/fred_swan.jpg"/></p>
+    <p><img src="img/fred_swan.jpg" height =600 width = 400></p>
     <p></p>
     <p>F: Absolutely. We lived on a farm. We had our own food and animals. My parents would spend all day driving me to Salem to see a space movie or something, and Portland was a place we</p>
     <p>didn't go to much until I was a teenager and I was a little more independent. I always lived out in the country.</p>
