--- a/tammyhamilton.html
+++ b/tammyhamilton.html
@@ -1,3 +1,23 @@
+<html>
+<head>
+  <meta content="text/html; charset=UTF-8" http-equiv="content-type">
+  <title>Tammy Hamilton Interview</title>
+	<link rel="stylesheet" href="style.css">
+	<li><a href="index.html">Home</a></li>
+  <li><a href="fredswan.html">Fred Swan Interview</a></li>
+<li><a href="Paul Rutz.html">Paul Rutz Interview</a></li>
+</head>
+<p> Interview Goes here<p/>
+<body>
+  <div id="article">
+    <h1>Tammy Hamilton Interview</h1>
+    <p>35-50</p>
+    <p>Jonas Blanchard</p>
+    <p>Trillium Honors</p>
+    <p>1/4/17</p>
+	  
+  </div>
+	
 <p>Tammy Hamilton is a second-generation American, a mother of two, and has a job in telecom. She lives in Southeast Portland and enjoys eating exotic foods. Her parents are Vietnamese immigrants who currently live in Hawaii. Her father is retired and currently renovates houses, and her mother is a lifelong psychic medium. </p>
 
 
@@ -58,3 +78,5 @@ Every day is full of stuff we do: get the kids ready for school, drop them off, 
 <p>J: So I think that is going to be the end of the recording, so thank you. </p>
 
 <p>T: Thank you. </p>
+	</body>
+</html>
