--- a/paulrutz.html
+++ b/paulrutz.html
@@ -5,6 +5,7 @@
 	<link rel="stylesheet" href="style.css">
 	<li><a href="index.html">Home</a></li>
   <li><a href="fredswan.html">Fred Swan Interview</a></li>
+<li><a href="tammyhamilton.html">Tammy Hamilton Interview</a></li>
 </head>
 <p> Interview Goes here<p/>
 <body>
