--- a/fredswan.html
+++ b/fredswan.html
@@ -5,6 +5,7 @@
 	<link rel="stylesheet" href="style.css">
 	<li><a href="index.html">Home</a></li>
 	<li><a href="paulrutz.html">paul Rutz Interview</a></li>
+	<li><a href="tammyhamilton.html">Tammy Hamilton Interview</a></li>
 </head>
 
 <body>
