--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
 				<li><a href="paulrutz.html">Paul Rutz Interview</a></li>
 				<li><a href="tammyhamilton.html">Tammy Hamilton Interview</a></li>
 			</ul>
+			<h2>Projects</h2>
+			<UL>
+				<li><a href="campspec.html">Camp Speculation</a></li>
+				<li><a href="raincloud.html">Rain Cloud</a></li>
+			</UL>
 		</div>
 	</body>
 </html>
