--- a/index.html
+++ b/index.html
@@ -22,6 +22,12 @@
 				<li><a href="campspec.html">Camp Speculation</a></li>
 				<li><a href="raincloud.html">Rain Cloud</a></li>
 			</UL>
+			<h2>Contacts</h2>
+			<p> jonasrblanchard@gmail.com
+			</p>
+			<p>
+			503-347-6959
+			</p>
 		</div>
 	</body>
 </html>
