--- a/raincloud.html
+++ b/raincloud.html
@@ -6,6 +6,12 @@
 	<li><a href="index.html">Home</a></li>
 </head>
 	<body>
+		<div id="article">
+    <h1>Rain Cloud</h1>
+    <p>J.R.Blanchard</P>
+		
+	  
+  </div>
 
 	<p>To first address the obvious, yes the world ended and no, school will not be canceled.</p>
 
