--- a/fredswan.html
+++ b/fredswan.html
@@ -4,7 +4,7 @@
   <title>Fred Swan Interview</title>
 	<link rel="stylesheet" href="style.css">
 	<li><a href="index.html">Home</a></li>
-	<li><a href="paulrutz.html">paul Rutz Interview</a></li>
+	<li><a href="paulrutz.html">Paul Rutz Interview</a></li>
 	<li><a href="tammyhamilton.html">Tammy Hamilton Interview</a></li>
 </head>
 
