--- a/campspec.html
+++ b/campspec.html
@@ -1,1 +1,35 @@
+<html>
+<head>
+  <meta content="text/html; charset=UTF-8" http-equiv="content-type">
+  <title>Camp Speculation : Orientation</title>
+	<link rel="stylesheet" href="style.css">
+	<li><a href="index.html">Home</a></li>
+</head>
+<p> Interview Goes here<p/>
+<body>
+  <div id="article">
+    <h1>Camp Speculation</h1>
+    <p>Orientation</p>
+    <p>J.R Blanchard</p>
+    <p>Trillium Honors</p>
+    <p>3/20/19</p>
+	  
+  </div>
+
+
+<p>Good morning campers! Welcome to your first day at Camp Speculation! I’m the Student Outreach Officer and I’m the voice of your camp. Did you sleep well? Of course you did, anyone with that amount of Methyprylon in their system would. But in any case, I genuinely hope you had a safe and clandestine trip to our little camp.</p>
+<p>Now first things first: If you or a bunkmate is in possession of any type of outside technology such as but not limited to cellphones, wristwatches, laser pointers, tablets or sundials, please report to your nearest security officer personnel. Your cooperation is integral with the prime directive.</p>
+<p>With formalities out of the way please look to your left, and right, then behind you. These other inductees will be your new family, so be respectful and helpful to each other. You will come to depend on one another as the camp goes on. Loyalty is key, unless of course they are in possession of prohibited technology, then a turn in reward of a free molar replacement will be mandatory for you and your cabinmates. But remember, ‘teamwork makes the dream work!’</p>
+
+<p>I’ll let you in on a little secret: At the end of orientation there is going to be a “freshman hunt” where all the upperclassmen chase the freshmen through the camp. I love a little hazing, but I have to warn you if you jump the fence to the outside of the camp, you’ll be in real trouble. IF you make it past the barbed wire then you might be susceptible to punishment by the staff. They hate it when freshmen try to leave. </p>
+<p>I know it’s tempting to escape the gas masks and hooks of the upperclassmen but you’ll just have to deal with it for the night. Behind the mess hall is the most popular freshman hiding place, so try somewhere else. I recommend the bonfire area, as upperclassmen have been bred to fear open flames. You’ll know its worked when they squeal wildly and run off to find easier prey. </p>
+<p>The freshmen hunt ends at dawn so good luck campers!</p>
+
+	<p>Now it’s time for the camp bulletin, where we highlight the new clubs and activities that have been introduced. Listen up freshmen, you’ll want to hear some of these. </p>
+	<p>First we have Archery, taught by Mr.Torres our survival teacher. This class prepares you for the fine art of archery. The curriculum goes over various arrows, bow, and laser types as well as the best spots for big game hunting. Mr.Torres assures me that his class will have all of the best equipment and techniques on hand. His class is fifth period in the woods behind the crematorium. Plus it counts as a english credit. Wait what?</p>
+	<p>Second is an old class that was brought back, forensics. Taught by Ms.Sullivan the curriculum was discontinued about five years ago. The then head counselor of the camp disliked the curriculum saying it was to “suspicious and undermining” to continue. Ms.Sullivan was then banished to the home ec. Class until the coup last year, ousting the old head counselor, Keith Boyd, and instating a new staff in the old ones place. Ms.Sullivan was brought back and forensics was reinstated in the curriculum. This class will be held in the main courtyard, next to the beehives that are still there from last year. Upperclassmen you know the ones I’m talking about. </p>
+	<p>Finally is Toxicology, taught by Mrs. Wilder. This class will examine poisons and toxins that are native to this area, this includes various fungi, plants, and animals. Mrs. Wilder charismatically put it, ‘my class has a 100% funtality rate’ to which I said ‘maybe I’ll join the class as well.’ this was met with a blank stare by Mrs.Wilder she looked neither angry nor happy, but a lapse in emotion. She stood up and in a metallic voice said, ‘thank you student no. 530469 for your cooperation’ I guess she forgot to say the interview was over, as she walked out of the room and into the current of moving students, late for their next class. Toxicology will be held in the stairwell where the cool kids smoke during assemblies.</p> 
+	<p>Whelp those are the classes up for grabs in the next semester, make sure to get those forecasting sheets and get in before they fill up. </p>
+	
+	<p>Man, I’ve almost bumped into the next timeslot. Thanks for listening campers, don’t forget to listen to me tomorrow at 3:52 am  for more updates. Stay tuned for Bird Speculation: the PA systems only bird speculation propaganda block. </p>
 
