--- a/campspec.html
+++ b/campspec.html
@@ -33,3 +33,5 @@
 	
 	<p>Man, I’ve almost bumped into the next timeslot. Thanks for listening campers, don’t forget to listen to me tomorrow at 3:52 am  for more updates. Stay tuned for Bird Speculation: the PA systems only bird speculation propaganda block. </p>
 
+</body>
+</html>
