--- a/campspec.html
+++ b/campspec.html
@@ -8,9 +8,8 @@
 <body>
   <div id="article">
     <h1>Camp Speculation</h1>
-    <p>Orientation</p>
+    <h1>Orientation</h1>
 	  <p>J.R Blanchard</p>
-    <p>3/20/19</p>
 	  
   </div>
 
