--- a/campspec.html
+++ b/campspec.html
@@ -13,7 +13,8 @@
 	  
   </div>
 
-
+	<h2> Student Outreach Officer:</h2>
+	<h2> "</h2> 
 <p>Good morning campers! Welcome to your first day at Camp Speculation! I’m the Student Outreach Officer and I’m the voice of your camp. Did you sleep well? Of course you did, anyone with that amount of Methyprylon in their system would. But in any case, I genuinely hope you had a safe and clandestine trip to our little camp.</p>
 <p>Now first things first: If you or a bunkmate is in possession of any type of outside technology such as but not limited to cellphones, wristwatches, laser pointers, tablets or sundials, please report to your nearest security officer personnel. Your cooperation is integral with the prime directive.</p>
 <p>With formalities out of the way please look to your left, and right, then behind you. These other inductees will be your new family, so be respectful and helpful to each other. You will come to depend on one another as the camp goes on. Loyalty is key, unless of course they are in possession of prohibited technology, then a turn in reward of a free molar replacement will be mandatory for you and your cabinmates. But remember, ‘teamwork makes the dream work!’</p>
@@ -29,6 +30,6 @@
 	<p>Whelp those are the classes up for grabs in the next semester, make sure to get those forecasting sheets and get in before they fill up. </p>
 	
 	<p>Man, I’ve almost bumped into the next timeslot. Thanks for listening campers, don’t forget to listen to me tomorrow at 3:52 am  for more updates. Stay tuned for Bird Speculation: the PA systems only bird speculation propaganda block. </p>
-
+	<h2> "</h2> 
 </body>
 </html>
