--- a/campspec.html
+++ b/campspec.html
@@ -9,7 +9,7 @@
   <div id="article">
     <h1>Camp Speculation</h1>
     <h1>Orientation</h1>
-	  <p>J.R Blanchard</p>
+	  <p>J.R. Blanchard</p>
 	  
   </div>
 
@@ -31,5 +31,14 @@
 	
 	<p>Man, I’ve almost bumped into the next timeslot. Thanks for listening campers, don’t forget to listen to me tomorrow at 3:52 am  for more updates. Stay tuned for Bird Speculation: the PA systems only bird speculation propaganda block. </p>
 	<h2> "</h2> 
+	
+	<h2> Bird Speculation -- New Year, New Birds</h2>
+	<h2> "</h2>
+	<p>Hello bird enthusiasts, welcome to the new year of Bird Speculation. The only PA bird speculation timeblock at camp. Today’s timeblock is about Robins. As you know Robins are migratory songbirds who like to stay in the camp bathroom during assemblies. They aren’t cool enough to hang out in the stairwell where the cool kids smoke, so they hide in the bathroom doing whatever Robins do while skipping assemblies. They scavenge for grubs and bugs and whistle annoyingly while campers try to sleep. Why they are even whistling at night I don’t know. Then they borrow 20 bucks from you to pay protection money from the upperclassmen but get beaten up anyway and don’t pay you back. God damn Robins. </p>
+	<p>Robins have an orange underbelly, something that is very distinctive to them. Another thing that is distinctive about them is how fucking dumb robins are. They say ‘how you doing Joseph?’ even if they already know you had a horrible day getting bullied by the archery kids behind the crematorium. Like, what? You didn’t see the massive hole in my shoulder from when fucking Todd shot me with his compound laser-sight bow? Yeah Robins are pretty dumb. They always say they’ll write a little piece about herons for your PA block but you know the Robin would never actually do it. </p>
+	<p>Like if they really cared about your PA block maybe they’d talk about it with other people around. Yeah I noticed you never talk about Bird Speculation when your other friends are around, Robin. I guess you think this PA is dumb huh? Well you made a promise to me last year at Stacy's party in the stairwell where the cool kids smoke. Did that mean nothing to you, am I not cool enough to deserve your precious time? </p>
+	<p>I mean I’m sorry I didn’t try my best to get along with your friends, but they aren’t nice to you. They always say how much of a tool you are when you get them cigarettes from the medical tent. I hate that they do that to you, I just want you to be happy again like when we were in the middle school camp. Remember when we used to sit in that big tree and look for birds in the early morning? The sun would come up and the 6th graders would be let out of their coops and peck oats from the feeders. I loved doing that with you, it’s the inspiration for this show. But now you’re just moody and depressed all the time, hanging out with the slightly cool people in the bathroom during assemblies. </p>
+	<p>I guess if you still want to hang out with those people who call you a tool then you can. It’s not my business who you hang with. But just remember that I’ll always be that nerdy birdwatcher who will be rooting for you during the badminton tournaments. I love you Robin.</p>
+	<h2>"</h2>
 </body>
 </html>
