--- a/campspec.html
+++ b/campspec.html
@@ -40,5 +40,19 @@
 	<p>I mean I’m sorry I didn’t try my best to get along with your friends, but they aren’t nice to you. They always say how much of a tool you are when you get them cigarettes from the medical tent. I hate that they do that to you, I just want you to be happy again like when we were in the middle school camp. Remember when we used to sit in that big tree and look for birds in the early morning? The sun would come up and the 6th graders would be let out of their coops and peck oats from the feeders. I loved doing that with you, it’s the inspiration for this show. But now you’re just moody and depressed all the time, hanging out with the slightly cool people in the bathroom during assemblies. </p>
 	<p>I guess if you still want to hang out with those people who call you a tool then you can. It’s not my business who you hang with. But just remember that I’ll always be that nerdy birdwatcher who will be rooting for you during the badminton tournaments. I love you Robin.</p>
 	<h2>"</h2>
+	
+	<h2>Writer's Corner -- First Semester Opener
+		<h2> "</h2>
+		<p>Hello listeners it’s the New Year of Camp Edition of Writer’s Corner. I’m the host of this PA block, student no.003452. For longtime listeners it more of the same as last year, but for our incoming freshmen this is a PA block meant specifically for student submitted short stories. So if you have a story you want to tell, just email me at 003452@hotmale,com. 
+<p>Now for our very own Lena Prince with her fantasy epic: ‘Lore Master’
+
+<p>We’ve been following Aste for about five hours now. Our guide is a special kind of boi. She has the telltale mask and wordless murmurings of the bois but she still has her wits and her humane air. My illustrator, Magret, has been duly drawing the flora and fauna of the area around our destination. And I have been doing my share of writing for this encyclopedia of the Bois Realm. </p>
+<p>We’re just coming up to a clearing. A large boi is sitting with what looks like a chain in its mouth. Aste doesn’t seem to hesitate to walk over and pet it. She pets the demons of this realm, though to her credit the boi is in the shape of a large dog. The boi greets her warmly. Me and Magret are still in the trees out of sight of the boi. Magret swiftly drawing the giant dog in her sketchbook. I’m writing this now, but the boi is facing us, and now walking forward. </p>
+<p>It’s maybe an hour after that encounter. Magret and I are a bit scratched up but nothing a hot fire and boiling soup won’t fix. The boi was hostile, he swung the chain around which was attached to a large macehead.  We ran as fast as we could around the arc of the ball. The boi continued to attack us, swinging the ball and wreaking the clearing around him. He howled with a beastly ferocity that shook me to the core. I myself am still calming down, Magret and Aste seem less concerned with how the boi ran off into the forest, leaving us panting and horrified. He’s definitely still out there, maybe just behind that knoll. </p>
+<p>Now that some food has been made, Aste’s laying down and presumably sleeping. Magret’s going over the drawings she’s accrued over the day. I am planning our next move, though privately I question the security of this venture. I know that danger was part of the quest we are on, but now it seems so real…</p>
+<p>That isn’t how I should think. If I can finish this encyclopedia and escape the realm of the bois, then this will be a huge success in the literary and scientific world back home.  For now I’ll just have to continue onward.</p>
+												   
+<p>There it was, the first part of Lena Prince's new story Lore Master. Next up: A word from our staff.</p>
+		<h2>"</h2>
 </body>
 </html>
