--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
 				<li><a href="campspec.html">Camp Speculation</a></li>
 				<li><a href="raincloud.html">Rain Cloud</a></li>
 			</UL>
+			<h2>About Me</h2>
+			<UL>
+				<li><a href="about.html">My Biography</a></li>
+			</UL>
 			<h2>Contacts</h2>
 			<p> jonasrblanchard@gmail.com
 			</p>
