--- a/about.html
+++ b/about.html
@@ -4,7 +4,16 @@
 	<title>About Me</title>
 	<link rel="stylesheet" href="style.css">
   	<li><a href="index.html">Home</a></li>
+	 <title>Fred Swan Interview</title>
 </head>
-
+<body>
+	<div id="article">
+    <h1>About Me</h1>
+    <p>Info goes here</p>
+    <p>Jonas Blanchard</p>
+    
+  </div>
+	</body>
+	
 
 </html>
