--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html>
 	<head>
 	<title>Jonas Blanchard's Portfolio</title>
-		<script>
+<div class="main">
+  <p>Current Time:</p>
+  <script>
 function startTime() {
   var today = new Date();
   var h = today.getHours();
@@ -20,7 +22,8 @@ function checkTime(i) {
 }
 </script>
 <body onload="startTime()">
-	
+<div id="txt"></div>
+</div>
 
 	<link rel="stylesheet" href="style.css">
 </head>
