--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 	<title>Jonas Blanchard's Portfolio</title>
 <div class="main">
-  <p>Current Time:</p>
+  <h1>Current Time:</h1>
   <script>
 function startTime() {
   var today = new Date();
