--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@ function checkTime(i) {
 			<UL>
 				<li><a href="campspec.html">Camp Speculation</a></li>
 				<li><a href="raincloud.html">Rain Cloud</a></li>
+				<li><a href="webscraping.html">Webscraping Documentation</a></li>
+
 			</UL>
 			<h2>About Me</h2>
 			<UL>
@@ -52,6 +54,7 @@ function checkTime(i) {
 			<h2>Contacts</h2>
 			<p> jonasrblanchard@gmail.com
 			</p>
+			<p> jonasblanchard@gmail.com</p>
 			<p>
 			503-347-6959
 			</p>
