--- a/webscraping.html
+++ b/webscraping.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+  <link rel="stylesheet" href="style.css">
 <head>
 <title>Webscraping</title>
 </head>
@@ -7,7 +8,9 @@
 <li><a href="index.html">Home</a></li>
 
 <h1>Webscraping Documentation</h1>
-<p>This is a paragraph.</p>
+<p>This is where I am documenting my work on the webscraping project for IB Compsci 3-4.</p>
+  
+  <p>  </p>
 
 </body>
 </html>
