--- a/webscraping.html
+++ b/webscraping.html
@@ -10,7 +10,8 @@
 <h1>Webscraping Documentation</h1>
 <p>This is where I am documenting my work on the webscraping project for IB Compsci 3-4.</p>
   
-  <p>  </p>
+  <h2>Flowchart </h2> 
+  <p><img src="img/webflow.PNG" height =400 width = 600></p>
 
 </body>
 </html>
