--- a/webscraping.html
+++ b/webscraping.html
@@ -11,7 +11,13 @@
 <p>This is where I am documenting my work on the webscraping project for IB Compsci 3-4.</p>
   
   <h2>Flowchart </h2> 
+  <p> </p>
   <p><img src="img/webflow.PNG" height =400 width = 600></p>
+  <h2>Tools, Techniques, and Refrences </h2>
+  <p> </p>
+  <p>Tools: Twilio , BeautifulSoup4  </p>
+  <p>Techniques: Variables, Conditionals, Functions, Printing </p> 
+  <p>Refrences: Dev.to, W3schools,  </p>
 
 </body>
 </html>
