--- a/index.html
+++ b/index.html
@@ -47,6 +47,11 @@ function checkTime(i) {
 				<li><a href="webscraping.html">Webscraping Documentation</a></li>
 
 			</UL>
+			<h2>Ib Works</h2>
+			<UL>
+				<li><a href="campspec.html">Camp Speculation</a></li>
+
+			</UL>
 			<h2>About Me</h2>
 			<UL>
 				<li><a href="about.html">My Biography</a></li>
