--- a/ee.html
+++ b/ee.html
@@ -5,7 +5,7 @@
 <title>Webscraping</title>
 </head>
 <body>
-<li><a href="index.html">Home</a></li>
+<li><a href="campspec.html">Home</a></li>
 
 <h1>Extended Essay</h1>
 <p>This is my Extended Essay written for IB. Completed spring 2020.</p>
