--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ function checkTime(i) {
 			</UL>
 			<h2>Ib Works</h2>
 			<UL>
-				<li><a href="ee.html">Camp Speculation</a></li>
+				<li><a href="ee.html">Extended Essay</a></li>
 
 			</UL>
 			<h2>About Me</h2>
