--- a/webscraping.html
+++ b/webscraping.html
@@ -18,6 +18,21 @@
   <p>Tools: Twilio , BeautifulSoup4  </p>
   <p>Techniques: Variables, Conditionals, Functions, Printing </p> 
   <p>Refrences: Dev.to, W3schools,  </p>
-
+  <h2>My Claim</h2>
+  <p>In the import section: </p>
+  <p>from twilio.rest import Client</p>
+  <p>In the main function: </p>
+  <p>account_sid = 'ACXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX'  </p>
+  <p>auth_token = 'your_auth_token' </p>
+  <p>client = Client(account_sid, auth_token) </p>
+  <p>message = client.messages \ </p>
+  <p>                .create( </p>
+  <p>                     body="Text Here.",  </p>
+  <p>                     from_='+15017122661', </p>
+  <p>                     to='+15558675310'  </p>
+  <p>                 )  </p>
+  <p>print(message.sid)  </p>
+  
+  <p>Explaination  </p>
 </body>
 </html>
