--- a/webscraping.html
+++ b/webscraping.html
@@ -19,20 +19,21 @@
   <p>Techniques: Variables, Conditionals, Functions, Printing </p> 
   <p>Refrences: Dev.to, W3schools,  </p>
   <h2>My Claim</h2>
-  <p>In the import section: </p>
+  <h3>In the import section: </h3>
   <p>from twilio.rest import Client</p>
-  <p>In the main function: </p>
+  <h3>In the main function: </h3>
+  <p> </p>
   <p>account_sid = 'ACXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX'  </p>
   <p>auth_token = 'your_auth_token' </p>
   <p>client = Client(account_sid, auth_token) </p>
   <p>message = client.messages \ </p>
-  <p>                .create( </p>
+  <p>                    .create( </p>
   <p>                     body="Text Here.",  </p>
   <p>                     from_='+15017122661', </p>
   <p>                     to='+15558675310'  </p>
-  <p>                 )  </p>
+  <p>                    )  </p>
   <p>print(message.sid)  </p>
   
-  <p>Explaination  </p>
+  <p>My contribution was a smaller section in the code that dealt with the Twilio integration. This code is taken from the Twilio website and consists of an importing of the Twilio library, an authentifactation field (where Twilio supplies the codes), and a print which sends a custom message to whatever phone is set up.     </p>
 </body>
 </html>
