--- a/webscraping.html
+++ b/webscraping.html
@@ -34,6 +34,11 @@
   <p>                    )  </p>
   <p>print(message.sid)  </p>
   
+  <h3>Explaination </h3>
   <p>My contribution was a smaller section in the code that dealt with the Twilio integration. This code is taken from the Twilio website and consists of an importing of the Twilio library, an authentifactation field (where Twilio supplies the codes), and a print which sends a custom message to whatever phone is set up.     </p>
-</body>
+
+  
+  
+  </body>
+  
 </html>
