--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ function checkTime(i) {
 			<h2>Ib Works</h2>
 			<UL>
 				<li><a href="ee.html">Extended Essay</a></li>
-				<li><a href="ee.html">History IA</a></li>
+				<li><a href="soviet.html">History IA</a></li>
 
 			</UL>
 			<h2>About Me</h2>
