--- a/soviet.html
+++ b/soviet.html
@@ -22,7 +22,7 @@ A limitation of this source is its focus, which isn’t entirely on history. It 
 This source is valuable because it discusses the decisions and planning of the USSR, and details their problems. This source’s information of precise facts gives very useful quotations that back up information that is given in this paper. It uses sources that include quotes from Soviet leaders and sources that give precise numbers and statistics of the war. Overall it is a very useful source that gives lots of information about the Soviet side of the Winter War. </p>
  </p>
 <p> </p>
-<h4>Investigation </h4>
+<h3>Investigation </h3>
 <h4>Introduction</h4>
 <p>The Winter War of 1939, known officially as the Russo-Finish war, was the conflict between the USSR and the Republic of Finland. This conflict, which was the result of a Russian invasion of eastern Finland, lasted from November of 1939 to March 1940, ending in a peace treaty between the two states. This war was considered by the USSR to be an easy victory, underestimating the Finnish army. Halfway through the war the Finnish Army had caused massive casualties for the Red army. In the end the Finnish Government signed a peace treaty to allow Russian military to inhabit parts of its southern border with Nazi Germany. By this time the Finnish army had inflicted massive casualties.</p> 
 <p>The reality of the botched invasion shows the missteps of Russian high command in their planning and carrying out of their invasion of Finland. Most notably the logistical preparations of Russia, from a lack of ammunition to an abundance of tanks and armored trucks that slowed them down in the Finish woodlands. Another mistake of the USSR is in how they prepared to fight the Finns, opting to use blitzkrieg tactics to quickly gain control of Helsinki. Because of these tactics and plans the Red Army suffered an early failure in their invasion of Finland.</p>
@@ -37,6 +37,9 @@ This source is valuable because it discusses the decisions and planning of the U
 
 <p>Most Russian tanks and vehicles were confined to the few roads in Finland, which made transportation of men, food, and firepower difficult. These conditions made the already meager amount of supplies slower to transport and heavily contributed to Russia's early failure. </p>
 
+<h3>Conclusion </h3>
+<p>The USSR during the Russo-Finnish war made a lot of mistakes around their planning to invade Finland. From choosing to adopt the Blitzkrieg tactic, which proved to be useless in the terrain that Finland was defending, to assuming that the invasion would only take a few weeks to conduct. The Russians incurred heavy losses that soured their victory that took place months later. Both of these problems directly lead to an early loss for the Soviets, who only after months of wearing down Finish defenses were able to have a peace treaty signed. The two main problems with the Russians plan to invade Finland were using the wrong tactics, such as tank warfare and Blitzkrieg and were undersupplied due to an underestimation of how long the invasion was going to last, causing them to incur large casualties and fail in the early portion of the Russo-Finish war. 
+ </p>
 
 </body>
 </html>
